Fix up Bootstrap to better display on mobile resolutions. Add camera going fullscreen. Update client.py to account for number of labels that need to be printed. Update README.

--- a/zebra_printer_webapp/public/styles.css
+++ b/zebra_printer_webapp/public/styles.css
@@ -1,17 +1,26 @@
 body {
     margin: 0;
+    height: 100vh;
 }
 
 /* https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp */
- /* Chrome, Safari, Edge, Opera */
- #product-price::-webkit-outer-spin-button,
- #product-price::-webkit-inner-spin-button {
-   -webkit-appearance: none;
-   margin: 0;
- }
- 
- /* Firefox */
- #product-price[type=number] {
-   -moz-appearance: textfield;
- }
- 
+/* Chrome, Safari, Edge, Opera */
+#product-price::-webkit-outer-spin-button,
+#product-price::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+#product-price[type=number] {
+  -moz-appearance: textfield;
+}
+
+.fas { 
+  color: #FFFFFF;
+  font-size: 2rem;
+}
+
+video {
+  display: none;
+}
